Fix build on CentOS 3.10, close #705

--- a/libcaf_core/CMakeLists.txt
+++ b/libcaf_core/CMakeLists.txt
@@ -28,6 +28,7 @@ set(LIBCAF_CORE_SRCS
   src/actor_registry.cpp
   src/actor_system.cpp
   src/actor_system_config.cpp
+  src/append_hex.cpp
   src/atom.cpp
   src/attachable.cpp
   src/behavior.cpp
