Increase watchdog timeout due to longer tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -621,7 +621,7 @@ if(NOT CAF_NO_UNIT_TESTS)
   macro (make_test suite)
     string(REPLACE " " "_" test_name ${suite})
     set(caf_test ${EXECUTABLE_OUTPUT_PATH}/caf-test)
-    add_test(${test_name} ${caf_test} -n -v 5 -s "${suite}" ${ARGN})
+    add_test(${test_name} ${caf_test} -r 300 -n -v 5 -s "${suite}" ${ARGN})
   endmacro ()
   list(LENGTH suites num_suites)
   message(STATUS "Found ${num_suites} test suites")
