--- a/libcaf_core/CMakeLists.txt
+++ b/libcaf_core/CMakeLists.txt
@@ -66,6 +66,7 @@ set(LIBCAF_CORE_SRCS
   src/ini_consumer.cpp
   src/invoke_result_visitor.cpp
   src/ipv4_address.cpp
+  src/ipv4_subnet.cpp
   src/local_actor.cpp
   src/logger.cpp
   src/mailbox_element.cpp
